ajout sample with project

--- a/FlyffEngine.vcxproj
+++ b/FlyffEngine.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="source\dllmain.cpp" />
     <ClCompile Include="source\pch.cpp" />
     <ClCompile Include="source\property\property_manager.cpp" />
+    <ClCompile Include="source\property\property_project.cpp" />
     <ClCompile Include="source\third_party\xml\pugixml.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -29,6 +30,7 @@
     <ClInclude Include="source\pch.h" />
     <ClInclude Include="source\property\property.hpp" />
     <ClInclude Include="source\property\property_manager.hpp" />
+    <ClInclude Include="source\property\property_project.hpp" />
     <ClInclude Include="source\property\prop\prop_item.hpp" />
     <ClInclude Include="source\third_party\json\picojson.h" />
     <ClInclude Include="source\third_party\xml\pugiconfig.h" />
