ajout lexerparser JSON, .h

--- a/FlyffEngine.vcxproj
+++ b/FlyffEngine.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\dllmain.cpp" />
+    <ClCompile Include="source\io\file\lexer_parser.cpp" />
     <ClCompile Include="source\pch.cpp" />
     <ClCompile Include="source\property\property_manager.cpp" />
     <ClCompile Include="source\property\property_project.cpp" />
@@ -27,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\framework.h" />
+    <ClInclude Include="source\io\file\lexer_parser.hpp" />
     <ClInclude Include="source\pch.h" />
     <ClInclude Include="source\property\property.hpp" />
     <ClInclude Include="source\property\property_manager.hpp" />
@@ -35,6 +37,7 @@
     <ClInclude Include="source\property\prop\prop_item.hpp" />
     <ClInclude Include="source\property\prop\prop_karma.hpp" />
     <ClInclude Include="source\property\prop\prop_mover.hpp" />
+    <ClInclude Include="source\property\prop\prop_skill.hpp" />
     <ClInclude Include="source\third_party\json\picojson.h" />
     <ClInclude Include="source\third_party\xml\pugiconfig.h" />
     <ClInclude Include="source\third_party\xml\pugixml.h" />
@@ -126,7 +129,7 @@
       <PreprocessorDefinitions>_DEBUG;FLYFFENGINE_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>source/;source/property/;source/property/prop/</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>source/;source/property/;source/property/prop/;source/io/file/</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp14</LanguageStandard>
       <EnableModules>true</EnableModules>
     </ClCompile>
