--- a/samples/Properties/Properties.vcxproj.filters
+++ b/samples/Properties/Properties.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="sample_propctrl.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="sample_skill.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
