--- a/samples/Properties/Properties.vcxproj.filters
+++ b/samples/Properties/Properties.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="sample_propctrl.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="sample_skill.cpp">
+    <ClCompile Include="sample_propskill.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
