--- a/FlyffEngine.vcxproj
+++ b/FlyffEngine.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="source\io\file\reader_header.cpp" />
     <ClCompile Include="source\io\file\reader_json.cpp" />
     <ClCompile Include="source\pch.cpp" />
+    <ClCompile Include="source\project\loader\project_manager_loader_prop_ctr.cpp" />
     <ClCompile Include="source\project\loader\project_manager_loader_prop_item.cpp" />
     <ClCompile Include="source\project\loader\project_manager_loader_prop_skill.cpp" />
     <ClCompile Include="source\project\project_manager.cpp" />
