--- a/samples/Properties/Properties.vcxproj
+++ b/samples/Properties/Properties.vcxproj
@@ -144,7 +144,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="sample_propctrl.cpp" />
     <ClCompile Include="sample_propitem.cpp" />
-    <ClCompile Include="sample_skill.cpp" />
+    <ClCompile Include="sample_propskill.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\FlyffEngine.vcxproj">
