chargement de propkarma json

--- a/samples/Properties/Properties.vcxproj
+++ b/samples/Properties/Properties.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="sample_propctrl.cpp" />
     <ClCompile Include="sample_propitem.cpp" />
+    <ClCompile Include="sample_propkarma.cpp" />
     <ClCompile Include="sample_propskill.cpp" />
   </ItemGroup>
   <ItemGroup>
