--- a/samples/Properties/Properties.vcxproj.filters
+++ b/samples/Properties/Properties.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="sample_propskill.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="sample_propkarma.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
