--- a/FlyffEngine.vcxproj
+++ b/FlyffEngine.vcxproj
@@ -25,6 +25,7 @@
     <ClCompile Include="source\pch.cpp" />
     <ClCompile Include="source\project\loader\project_manager_loader_prop_ctr.cpp" />
     <ClCompile Include="source\project\loader\project_manager_loader_prop_item.cpp" />
+    <ClCompile Include="source\project\loader\project_manager_loader_prop_karma.cpp" />
     <ClCompile Include="source\project\loader\project_manager_loader_prop_skill.cpp" />
     <ClCompile Include="source\project\project_manager.cpp" />
     <ClCompile Include="source\property\property_manager.cpp" />
