--- a/FlyffEngine.vcxproj.filters
+++ b/FlyffEngine.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="source\project\loader\project_manager_loader_prop_ctr.cpp">
       <Filter>Fichiers sources\project\loader</Filter>
     </ClCompile>
+    <ClCompile Include="source\project\loader\project_manager_loader_prop_karma.cpp">
+      <Filter>Fichiers sources\project\loader</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\framework.h">
