load propctrl XML

--- a/FlyffEngine.vcxproj
+++ b/FlyffEngine.vcxproj
@@ -22,8 +22,9 @@
     <ClCompile Include="source\dllmain.cpp" />
     <ClCompile Include="source\io\file\reader_header.cpp" />
     <ClCompile Include="source\io\file\reader_json.cpp" />
+    <ClCompile Include="source\io\file\reader_xml.cpp" />
     <ClCompile Include="source\pch.cpp" />
-    <ClCompile Include="source\project\loader\project_manager_loader_prop_ctr.cpp" />
+    <ClCompile Include="source\project\loader\project_manager_loader_prop_ctrl.cpp" />
     <ClCompile Include="source\project\loader\project_manager_loader_prop_item.cpp" />
     <ClCompile Include="source\project\loader\project_manager_loader_prop_karma.cpp" />
     <ClCompile Include="source\project\loader\project_manager_loader_prop_skill.cpp" />
@@ -36,6 +37,7 @@
     <ClInclude Include="source\io\file\reader.hpp" />
     <ClInclude Include="source\io\file\reader_header.hpp" />
     <ClInclude Include="source\io\file\reader_json.hpp" />
+    <ClInclude Include="source\io\file\reader_xml.hpp" />
     <ClInclude Include="source\pch.h" />
     <ClInclude Include="source\project\project_manager.hpp" />
     <ClInclude Include="source\property\property.hpp" />
